working on HTML code. added start game button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Rock, Paper, Scissors</h1>
+
+        <div class="game-area">
+            <div class="game-info">
+                <p>Choose R (Rock), P (Paper), or S (Scissors)</p>
+                <button id="startButton">Start Game</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script> 
 </body>
 </html>
