options class HTML

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
                 <button id="startButton">Start Game</button>
             </div>
         </div>
+
+    </div>
+
+    <div class="option" id="rock">
+        <p>Rock (R)</p>
+    </div>
+    
+    <div class="option" id="paper">
+        <p>Paper (P)</p>
+    </div>
+    
+    <div class="option" id="scissors">
+        <p>Scissors (S)</p>
+    </div>
+
     </div>
     <script src="script.js"></script> 
 </body>
