stats section HTML

--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
     </div>
 
     </div>
+
+    <div class="choice-stats">
+        <h2>Your Choices</h2>
+        <div class="choices">
+            <div class="choice"?>
+                <h3>Rock:</h3>
+                <p id="rockCount">0</p>
+            </div>
+            <div class="choice">
+                <h3>Paper:</h3>
+                <p id="paperCount">0</p>
+            </div>
+            <div class="choice">
+                <h3>Scissors:</h3>
+                <p id="scissorsCount">0</p>
+            </div>
+        </div>
+    </div>
+    
+    
     <script src="script.js"></script> 
 </body>
 </html>
